# ChangeLog for sys-fs/e2fsprogs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.260 2013/04/25 09:21:26 ago Exp $

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.7.ebuild:
  Stable for x86, wrt bug #467008

  25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.7.ebuild:
  Stable for amd64, wrt bug #467008

  25 Apr 2013; Jeroen Roovers <jer@gentoo.org> e2fsprogs-1.42.7.ebuild:
  Stable for HPPA (bug #467008).

*e2fsprogs-1.42.7 (07 Mar 2013)

  07 Mar 2013; Lars Wendler <polynomial-c@gentoo.org> +e2fsprogs-1.42.7.ebuild:
  Non-maintainer commit: Version bump with kind permission from Chainsaw (bug
  #454532).

  22 Feb 2013; Zac Medico <zmedico@gentoo.org> e2fsprogs-1.42.6.ebuild:
  Add ~arm-linux keyword.

*e2fsprogs-1.42.6 (07 Oct 2012)

  07 Oct 2012; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-1.42.6.ebuild:
  Version bump #437434 by Bernhard Hartleb.

  04 Aug 2012; Mike Frysinger <vapier@gentoo.org>
  +files/e2fsprogs-1.42.5-ldflags.patch, e2fsprogs-1.42.5.ebuild:
  Revert broken linking behavior from upstream #429756 by Lars Wendler.

*e2fsprogs-1.42.5 (03 Aug 2012)

  03 Aug 2012; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-1.42.5.ebuild:
  Version bump #429494 by Samuli Suominen.

*e2fsprogs-1.42.4 (14 Jun 2012)

  14 Jun 2012; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-1.42.4.ebuild:
  Version bump #420925 by Sergei Trofimovich.

*e2fsprogs-1.42.3 (22 May 2012)

  22 May 2012; Mike Frysinger <vapier@gentoo.org> +e2fsprogs-1.42.3.ebuild,
  +files/e2fsprogs-1.42.3-quota-time.patch,
  +files/e2fsprogs-1.42.3-quotactl.patch:
  Version bump #416771 by Samuli Suominen.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> e2fsprogs-1.41.7-r1.ebuild,
  e2fsprogs-1.41.12.ebuild, e2fsprogs-1.41.12-r1.ebuild,
  e2fsprogs-1.41.14.ebuild, e2fsprogs-1.42.ebuild, e2fsprogs-1.42.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig
