@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.98 2013/04/25 09:21:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.99 2013/04/26 09:19:30 ago Exp $
+
+  26 Apr 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.7.ebuild:
+  Stable for sparc, wrt bug #467008
 
   25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-libs-1.42.7.ebuild:
   Stable for x86, wrt bug #467008
