@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/e2fsprogs
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.260 2013/04/25 09:21:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/e2fsprogs/ChangeLog,v 1.261 2013/04/26 09:19:56 ago Exp $
+
+  26 Apr 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.7.ebuild:
+  Stable for sparc, wrt bug #467008
 
   25 Apr 2013; Agostino Sarubbo <ago@gentoo.org> e2fsprogs-1.42.7.ebuild:
   Stable for x86, wrt bug #467008
